<resources>
    <string name="app_name">JHUMP</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_listings">All Listings</string>
    <string name="create_listing">Create Listing</string>
    <string name="my_listings">My Listings</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="sign_up">Sign Up</string>
    <string name="jsmith12_jhu_edu">jsmith12@jhu.edu</string>
    <string name="hidden_password">***********</string>
    <string name="your_jhu_email">Your JHU Email</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="condition">Condition:</string>
    <string-array name="cat_spinner">
        <item>N/A</item>
        <item>Misc</item>
        <item>Textbook</item>
        <item>I-Clicker</item>
        <item>Lab Equipment</item>
    </string-array>
    <string-array name="con_spinner">
        <item>N/A</item>
        <item>New</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Used</item>
    </string-array>
    <string name="subject">Subject:</string>
    <string name="category">Category:</string>
    <string name="seller">Seller:</string>
    <string name="description">Description:</string>
    <string name="listed_price">Listed Price:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="item_name">Item Name</string>
    <string name="your_name">Your Name *</string>
</resources>