<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/allListings"
            android:fontFamily="@font/varela_round"
            android:title="@string/all_listings" />
        <item
            android:id="@+id/createListings"
            android:fontFamily="@font/varela_round"
            android:title="@string/create_listing" />
        <item
            android:id="@+id/myListings"
            android:fontFamily="@font/varela_round"
            android:title="@string/my_listings" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:fontFamily="@font/varela_round"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/signOut"
            android:fontFamily="@font/varela_round"
            android:title="@string/sign_out" />
    </group>
</menu>
